--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,12 @@ repository = "https://github.com/ndavd/colinterp"
 keywords = ["cli", "colors", "palette"]
 categories = ["command-line-utilities"]
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 colored = "2.0.0"
+js-sys = "0.3.61"
+wasm-bindgen = "0.2.84"
